Håller på att förstöra addcatch, kommer nog inte att hinna klart, men lika bra att checka in, innan semestern

--- a/MeasureMyPike.Web/MeasureMyPike.Web.csproj
+++ b/MeasureMyPike.Web/MeasureMyPike.Web.csproj
@@ -197,19 +197,14 @@
     <Content Include="App\MeasureMyPike\protractor.conf.js" />
     <Content Include="App\MeasureMyPike\src\app\app.component.html" />
     <Content Include="App\MeasureMyPike\src\app\common\toolbar\toolbar.component.html" />
-    <Content Include="App\MeasureMyPike\src\app\view\brand-view\brand-view.component.html" />
-    <Content Include="App\MeasureMyPike\src\app\view\catch-view\catch-view.component.html" />
-    <Content Include="App\MeasureMyPike\src\app\view\home-view\home-view.component.html" />
-    <Content Include="App\MeasureMyPike\src\app\view\user-view\Login\userLogin-view.component.scss" />
-    <Content Include="App\MeasureMyPike\src\app\view\user-view\Profile\userProfile-view.component.html" />
-    <Content Include="App\MeasureMyPike\src\app\view\user-view\Profile\userProfile-view.component.scss" />
     <Content Include="App\MeasureMyPike\src\app\common\logout\logoutDialog.component.scss" />
-    <Content Include="App\MeasureMyPike\src\app\view\home-view\home-view.component.scss" />
     <Content Include="App\MeasureMyPike\src\app\common\toolbar\toolbar.component.scss" />
-    <Content Include="App\MeasureMyPike\src\app\view\catch-view\catch-view.component.scss" />
-    <None Include="App\MeasureMyPike\src\app\view\user-view\Register\userRegister-view.component.scss" />
-    <Content Include="App\MeasureMyPike\src\app\view\user-view\Login\userLogin-view.component.html" />
-    <Content Include="App\MeasureMyPike\src\app\view\user-view\Register\userRegister-view.component.html" />
+    <Content Include="App\MeasureMyPike\src\app\view\brand\brand-view.component.html" />
+    <Content Include="App\MeasureMyPike\src\app\view\catch\catch-view.component.html" />
+    <Content Include="App\MeasureMyPike\src\app\view\home\home-view.component.html" />
+    <Content Include="App\MeasureMyPike\src\app\view\user\Login\userLogin-view.component.html" />
+    <Content Include="App\MeasureMyPike\src\app\view\user\Profile\userProfile-view.component.html" />
+    <Content Include="App\MeasureMyPike\src\app\view\user\Register\userRegister-view.component.html" />
     <Content Include="App\MeasureMyPike\src\favicon.ico" />
     <Content Include="App\MeasureMyPike\src\Icons\big-pike.png" />
     <Content Include="App\MeasureMyPike\src\Icons\big-pike.svg" />
@@ -262,7 +257,12 @@
     <Content Include="App\MeasureMyPike\tslint.json" />
     <Content Include="App\MeasureMyPike\src\main.scss" />
     <Content Include="App\MeasureMyPike\src\app\app.component.scss" />
-    <Content Include="App\MeasureMyPike\src\app\view\brand-view\brand-view.component.scss" />
+    <Content Include="App\MeasureMyPike\src\app\view\brand\brand-view.component.scss" />
+    <Content Include="App\MeasureMyPike\src\app\view\catch\catch-view.component.scss" />
+    <Content Include="App\MeasureMyPike\src\app\view\home\home-view.component.scss" />
+    <Content Include="App\MeasureMyPike\src\app\view\user\Login\userLogin-view.component.scss" />
+    <Content Include="App\MeasureMyPike\src\app\view\user\Profile\userProfile-view.component.scss" />
+    <Content Include="App\MeasureMyPike\src\app\view\user\Register\userRegister-view.component.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -339,18 +339,18 @@
     <TypeScriptCompile Include="App\MeasureMyPike\src\app\service\statistics\statistics.service.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\app\service\user\user.service.spec.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\app\service\user\user.service.ts" />
-    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\brand-view\brand-view.component.spec.ts" />
-    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\brand-view\brand-view.component.ts" />
-    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\catch-view\catch-view.component.spec.ts" />
-    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\catch-view\catch-view.component.ts" />
-    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\home-view\home-view.component.spec.ts" />
-    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\home-view\home-view.component.ts" />
-    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\user-view\Login\userLogin-view.component.ts" />
-    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\user-view\Login\userLogin-view.component.spec.ts" />
-    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\user-view\Profile\userProfile-view.component.spec.ts" />
-    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\user-view\Profile\userProfile-view.component.ts" />
-    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\user-view\Register\userRegister-view.component.spec.ts" />
-    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\user-view\Register\userRegister-view.component.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\brand\brand-view.component.spec.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\brand\brand-view.component.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\catch\catch-view.component.spec.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\catch\catch-view.component.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\home\home-view.component.spec.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\home\home-view.component.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\user\Login\userLogin-view.component.spec.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\user\Login\userLogin-view.component.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\user\Profile\userProfile-view.component.spec.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\user\Profile\userProfile-view.component.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\user\Register\userRegister-view.component.spec.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\user\Register\userRegister-view.component.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\environments\environment.prod.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\environments\environment.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\main.ts" />
