--- a/MeasureMyPike.Web/MeasureMyPike.Web.csproj
+++ b/MeasureMyPike.Web/MeasureMyPike.Web.csproj
@@ -196,6 +196,7 @@
     <Content Include="App\MeasureMyPike\karma.conf.js" />
     <Content Include="App\MeasureMyPike\protractor.conf.js" />
     <Content Include="App\MeasureMyPike\src\app\app.component.html" />
+    <Content Include="App\MeasureMyPike\src\app\common\saveChanges\saveChangesDialog.component.html" />
     <Content Include="App\MeasureMyPike\src\app\common\toolbar\toolbar.component.html" />
     <Content Include="App\MeasureMyPike\src\app\common\logout\logoutDialog.component.scss" />
     <Content Include="App\MeasureMyPike\src\app\common\toolbar\toolbar.component.scss" />
@@ -206,12 +207,6 @@
     <Content Include="App\MeasureMyPike\src\app\view\user\Profile\userProfile-view.component.html" />
     <Content Include="App\MeasureMyPike\src\app\view\user\Register\userRegister-view.component.html" />
     <Content Include="App\MeasureMyPike\src\favicon.ico" />
-    <Content Include="App\MeasureMyPike\src\Icons\big-pike.png" />
-    <Content Include="App\MeasureMyPike\src\Icons\big-pike.svg" />
-    <Content Include="App\MeasureMyPike\src\Icons\exit.png" />
-    <Content Include="App\MeasureMyPike\src\Icons\exit.svg" />
-    <Content Include="App\MeasureMyPike\src\Icons\notebook.png" />
-    <Content Include="App\MeasureMyPike\src\Icons\notebook.svg" />
     <Content Include="App\MeasureMyPike\src\index.html" />
     <Content Include="App\MeasureMyPike\src\styles.css" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
@@ -220,6 +215,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Mockdata\Fisk.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
@@ -263,6 +259,7 @@
     <Content Include="App\MeasureMyPike\src\app\view\user\Login\userLogin-view.component.scss" />
     <Content Include="App\MeasureMyPike\src\app\view\user\Profile\userProfile-view.component.scss" />
     <Content Include="App\MeasureMyPike\src\app\view\user\Register\userRegister-view.component.scss" />
+    <Content Include="App\MeasureMyPike\src\app\common\saveChanges\saveChangesDialog.component.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -324,11 +321,22 @@
     <TypeScriptCompile Include="App\MeasureMyPike\src\app\app.component.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\app\app.module.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\app\common\auth\auth.guard.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\common\compare.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\app\common\headers.ts" />
     <Content Include="App\MeasureMyPike\src\app\common\logout\logoutDialog.component.html" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\common\index.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\app\common\logout\logoutDialog.component.spec.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\app\common\logout\logoutDialog.component.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\common\pipes\centimeterToMeter.pipe.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\common\pipes\gramsToKilo.pipe.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\common\pipes\index.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\common\saveChanges\saveChangesDialog.component.spec.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\common\saveChanges\saveChangesDialog.component.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\app\common\toolbar\toolbar.component.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\model\catch\catch.model.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\model\catch\catch.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\model\user\user.model.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\model\user\user.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\app\service\brand\brand.service.spec.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\app\service\brand\brand.service.ts" />
     <TypeScriptCompile Include="App\MeasureMyPike\src\app\service\catch\catch.service.spec.ts" />
