--- a/MeasureMyPike.Web/Web.config
+++ b/MeasureMyPike.Web/Web.config
@@ -82,7 +82,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ModelContainer" connectionString="metadata=&quot;res://*/Models.MeasureMyPikeModel.csdl|res://*/Models.MeasureMyPikeModel.ssdl|res://*/Models.MeasureMyPikeModel.msl&quot;;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=MeasureMyPike;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="ModelContainer" connectionString="metadata=&quot;res://*/Models.MeasureMyPikeModel.csdl|res://*/Models.MeasureMyPikeModel.ssdl|res://*/Models.MeasureMyPikeModel.msl&quot;;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=MeasureMyPike;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="ModelContainer" connectionString="metadata=&quot;res://*/Models.MeasureMyPikeModel.csdl|res://*/Models.MeasureMyPikeModel.ssdl|res://*/Models.MeasureMyPikeModel.msl&quot;;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=MeasureMyPike;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="ModelContainer" connectionString="metadata=&quot;res://*/Models.MeasureMyPikeModel.csdl|res://*/Models.MeasureMyPikeModel.ssdl|res://*/Models.MeasureMyPikeModel.msl&quot;;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=MeasureMyPike;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
